--- a/html/inicio.html
+++ b/html/inicio.html
@@ -235,7 +235,7 @@
                                 <h3 class="text-center mb-4">Descubre las últimas tecnologías de productos</h3>
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <img src="/public/catalogs/macbook.gif" alt="Laptops" class="img-fluid mb-4 rounded" style="width: 100%; height: 200px; object-fit: contain;">
+                                        <img src="./public/catalogs/macbook.gif" alt="Laptops" class="img-fluid mb-4 rounded" style="width: 100%; height: 200px; object-fit: contain;">
                                     </div>
                                     <div class="col-md-6">
                                         <h4 class="mb-3">Laptops y Computadoras</h4>
@@ -248,7 +248,7 @@
                                         <p class="text-muted">Explora nuestra selección de dispositivos móviles con las características más avanzadas del mercado.</p>
                                     </div>
                                     <div class="col-md-6 rounded">
-                                        <img src="/public/catalogs/phone.png" alt="Smartphones" class="img-fluid mb-4 rounded" style="width: 100%; height: 280px; object-fit: contain;">
+                                        <img src="./public/catalogs/phone.png" alt="Smartphones" class="img-fluid mb-4 rounded" style="width: 100%; height: 280px; object-fit: contain;">
                                     </div>                                
                                 </div>
                                 <div class="mt-4">
@@ -259,23 +259,23 @@
                         </div>
                         <div class="col-md-4">
                             <div class="product-card bg-white p-4 rounded shadow mb-4">
-                                <img src="/public/catalogs/food.png" alt="Artesanías" class="img-fluid mb-4 rounded" style="height: 200px; object-fit: cover; width: 100%;">
+                                <img src="./public/catalogs/food.png" alt="Artesanías" class="img-fluid mb-4 rounded" style="height: 200px; object-fit: cover; width: 100%;">
                                 <h4 class="mb-3">Alimentos</h4>
                                 <p class="text-muted">Descubre una amplia variedad de alimentos frescos y preparados para tu día a día</p>
                             </div>
                             <div class="product-card bg-white p-4 rounded shadow">
                                 <div class="row g-2">
                                     <div class="col-6">
-                                        <img src="/public/catalogs/c1.png" alt="Moda" class="img-fluid rounded" style="height: 100px; object-fit: cover; width: 100%;">
+                                        <img src="./public/catalogs/c1.png" alt="Moda" class="img-fluid rounded" style="height: 100px; object-fit: cover; width: 100%;">
                                     </div>
                                     <div class="col-6">
-                                        <img src="/public/catalogs/c2.png" alt="Moda" class="img-fluid rounded" style="height: 100px; object-fit: cover; width: 100%;">
+                                        <img src="./public/catalogs/c2.png" alt="Moda" class="img-fluid rounded" style="height: 100px; object-fit: cover; width: 100%;">
                                     </div>
                                     <div class="col-6">
-                                        <img src="/public/catalogs/c3.png" alt="Moda" class="img-fluid rounded" style="height: 100px; object-fit: cover; width: 100%;">
+                                        <img src="./public/catalogs/c3.png" alt="Moda" class="img-fluid rounded" style="height: 100px; object-fit: cover; width: 100%;">
                                     </div>
                                     <div class="col-6">
-                                        <img src="/public/catalogs/c4.png" alt="Moda" class="img-fluid rounded" style="height: 100px; object-fit: cover; width: 100%;">
+                                        <img src="./public/catalogs/c4.png" alt="Moda" class="img-fluid rounded" style="height: 100px; object-fit: cover; width: 100%;">
                                     </div>
                                 </div>
                                 <h4 class="mb-3 mt-3">Moda</h4>
